Dodavanje lokacije, čitanje UTF-8